--- a/src/main/resources/assets/programblock/lang/zh_cn.json
+++ b/src/main/resources/assets/programblock/lang/zh_cn.json
@@ -1,3 +1,5 @@
 {
-  "block.programblock.program_block": "程序方块"
+  "block.programblock.program_block": "程序方块",
+  "program.compile_failed": "编译时出现错误: %1$s",
+  "program.runtime_error": "运行时出现异常: %1$s"
 }
