--- a/src/main/resources/assets/programblock/lang/en_us.json
+++ b/src/main/resources/assets/programblock/lang/en_us.json
@@ -1,7 +1,11 @@
 {
   "block.programblock.program_block": "Program Block",
   "program.compile_failed": "Compile code with: %1$s",
-  "program.runtime_error": "A runtime exception occurred: %1$s",
+  "program.compile_success": "Compile Success",
+  "program.save": "Save and compile",
+  "program.runtime_error": "A runtime exception occurred with block on %2$s: %1$s",
   "program.open_editor": "Open external editor",
-  "program.editor_redirect": "Please finish editing in the external editor"
+  "program.editor_redirect": "Please finish editing in the external editor",
+  "program.redstone_control.enable": "Redstone Control:Enable",
+  "program.redstone_control.disble": "Redstone Control:Disble"
 }
