--- a/src/main/resources/assets/programblock/lang/zh_cn.json
+++ b/src/main/resources/assets/programblock/lang/zh_cn.json
@@ -1,5 +1,6 @@
 {
   "block.programblock.program_block": "程序方块",
+  "block.programblock.event_block": "事件方块",
   "program.compile_failed": "编译时出现错误: %1$s",
   "program.compile_success": "编译成功",
   "program.save": "保存并编译",
